Fix the issue where the z-index of nav__modal is not set causing the arrow to appear on top of it

--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ header h1 {
   padding: 2em 0;
   width: 100%;
   top: 1.9em;
+  z-index: 1;
 }
 .hidden{
   display: none;
